# kubescope

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release-docker.yaml
docs/: Gemfile  _config.yaml  _config.yml  index.markdown  index.md
docs/_layouts/: default.html
docs/_site/: feed.xml  index.html
docs/_site/exercises/: exercises.html
docs/_site/exercises/01-pod-local-access/: question.html  question.md  solution.html
docs/_site/exercises/02-deployment/: question.html  question.md  solution.html
docs/_site/exercises/03-env-variables/: question.html  solution.html
docs/exercises/: exercises.md  index.md
docs/exercises/01-pod-local-access/: .solution.md  index.md  question.md  solution.md
docs/exercises/02-deployment/: index.md  question.md  solution.md
docs/exercises/03-env-variables/: .solution.md  index.md  question.md  solution.md
docs/exercises/04-configmap-as-env/: index.md  solution.md
docs/exercises/04-secrets-as-env/: index.md  question.md
docs/exercises/05-configmap-as-file/: index.md  solution.md
docs/exercises/05-sidecar-write/: index.md
docs/exercises/06-secrets-as-env/: index.md  solution.md
docs/exercises/07-init-container/: index.md  solution.md
docs/exercises/08-database/: index.md  solution.md
docs/exercises/09-database-persistence/: index.md  solution.md
kubescope/: auth.py  config.py  exceptions.py  main.py
kubescope/config/: default.ini
kubescope/db/: database.py
(+3 files in other folders)
